--- a/index.html
+++ b/index.html
@@ -1,44 +1,68 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styles.css" />
     <title>PaintJS</title>
   </head>
   <body>
     <canvas id="jsCanvas" class="canvas"></canvas>
     <div class="controls">
+      <div class="controls__range">
+        <input
+          type="range"
+          id="jsRange"
+          min="0.1"
+          max="5"
+          value="2.5"
+          step="0.1"
+        />
+      </div>
+      <div class="controls__btns">
+        <button id="jsMode">Fill</button>
+        <button id="jsSave">Save</button>
+      </div>
       <div class="controls__colors" id="jsColors">
-        <div class="controls__color" style="background-color: #2c2c2c"></div>
-        <div class="controls__color" style="background-color: white"></div>
-        <div class="controls__color" style="background-color: #ff3b30"></div>
-        <div class="controls__color" style="background-color: #ff9500"></div>
-        <div class="controls__color" style="background-color: #ffcc00"></div>
-        <div class="controls__color" style="background-color: #4cd963"></div>
-        <div class="controls__color" style="background-color: #5ac8fa"></div>
-        <div class="controls__color" style="background-color: #0579ff"></div>
-        <div class="controls__color" style="background-color: #5856d6"></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#2c2c2c"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:white"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#FF3B30"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#FF9500"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#FFCC00"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#4CD963"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#5AC8FA"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#0579FF"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#5856D6"
+        ></div>
       </div>
     </div>
     <script src="app.js"></script>
   </body>
-  =======
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="styles.css" />
-      <title>PaintJS</title>
-    </head>
-    <body>
-      <canvas id="jsCanvas" class="canvas"></canvas>
-      <script src="app.js"></script>
-    </body>
-    >>>>>>> e31f2ee70dc305016ca1f748e91553da1554d14c
-  </html>
 </html>
